fixed layou issues that were forcing horizontal scroll on mobile

--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -232,7 +232,7 @@ cite {
 /** Utilities **/
 
 .section-spacer {
-  @apply py-10;
+  @apply py-8;
 }
 
 /** Dialog **/
